[package]
name = "patch-db-derive"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
description = "derive macros for defining typed patch dbs"
license = "MIT"
repository = "https://github.com/dr-bonez/patch-db"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
patch-db-derive-internals = { path = "../patch-db-derive-internals" }
syn = "1.0.62"
