[package]
name = "patch-db"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
fd-lock-rs = "0.1.3"
futures = "0.3.8"
json-patch = { path = "../../json-patch" }
json-ptr = { path = "../../json-ptr" }
nix = "0.20.0"
qutex-2 = { path = "../../qutex" }
serde = { version = "1.0.118", features = ["rc"] }
serde_json = "1.0.61"
serde_cbor = { git = "https://github.com/dr-bonez/cbor.git" }
thiserror = "1.0.23"
tokio = { version = "1.0.1", features = ["sync", "fs", "rt", "io-util", "macros"] }

[dev-dependencies]
serde = { version = "1.0.118", features = ["rc", "derive"] }
