[package]
name = "patch-db"
version = "0.1.0"
authors = ["Aiden McClelland <aiden@start9labs.com>"]
edition = "2018"
categories = ["database-implementations"]
keywords = ["json", "json-pointer", "json-patch"]
description = "A database that tracks state updates as RFC 6902 JSON Patches"
repository = "https://github.com/Start9Labs/patch-db"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
fd-lock-rs = "0.1.3"
futures = "0.3.8"
json-patch = { path = "../json-patch" }
json-ptr = { path = "../json-ptr" }
nix = "0.20.0"
qutex-2 = { path = "../qutex" }
serde = { version = "1.0.118", features = ["rc"] }
serde_json = "1.0.61"
serde_cbor = { path = "../cbor" }
thiserror = "1.0.23"
tokio = { version = "1.0.1", features = ["sync", "fs", "rt", "io-util", "macros"] }
patch-db-macro = { path = "../patch-db-macro" }
lazy_static = "1.4.0"

[dev-dependencies]
proptest = "1.0.0"
serde = { version = "1.0.118", features = ["rc", "derive"] }
tokio = { version = "1.0.1", features = ["sync", "fs", "rt", "rt-multi-thread", "io-util", "macros"] }
